start to fix overlap

--- a/scripts/core/stylesheets/general.css
+++ b/scripts/core/stylesheets/general.css
@@ -31,3 +31,9 @@ html, body, .app,
 .workspace, .page {
     display: block;
 }
+
+.shadow {
+    -moz-box-shadow: inset 0 0 10px #000;
+    -webkit-box-shadow: inset 0 0 10px #000;
+    box-shadow: inset 0 0 10px #000;
+}
