--- a/scripts/core/stylesheets/widget.css
+++ b/scripts/core/stylesheets/widget.css
@@ -19,7 +19,11 @@
 }
 
 .widget .content {
-    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 }
 
 .widget .content ul {
